applications/ollama-lab/base/ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama-lab
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  selector:
    kubevirt.io/domain: ubuntu-ollama
  ports:
    - name: ollama
      port: 11434
      targetPort: 11434
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-external
  namespace: ollama-lab
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  selector:
    kubevirt.io/domain: ubuntu-ollama
  ports:
    - name: ollama
      port: 11434
      targetPort: 11434
  type: LoadBalancer
